--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.1
+Flask-Cors==4.0.0
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
+flask-swagger-ui==4.11.1
 greenlet==3.0.3
 itsdangerous==2.1.2
 Jinja2==3.1.3
