--- a/introduccion_express/package.json
+++ b/introduccion_express/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Introduccion a express",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "start:dev": "nodemon index.js"
   },
   "keywords": [
     "node",
@@ -15,6 +17,12 @@
   "author": "Eduardo de Rivero",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "nodemon": "^3.1.0"
   }
 }
