--- a/express_con_prisma/package.json
+++ b/express_con_prisma/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "Uso de express con el ORM de prisma",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "crear:migracion": "prisma migrate dev"
+    "crear:migracion": "prisma migrate dev",
+    "start:dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [
     "Express",
@@ -18,6 +20,12 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "joi": "^17.12.2",
     "prisma": "^5.10.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.1.0"
   }
 }
