--- a/express_con_prisma/package.json
+++ b/express_con_prisma/package.json
@@ -21,6 +21,7 @@
     "@prisma/client": "^5.10.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-async-handler": "^1.2.0",
     "joi": "^17.12.2",
     "prisma": "^5.10.2"
   },
