--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "express": "^4.18.3",
+    "express-async-handler": "^1.2.0",
     "joi": "^17.12.2",
     "prisma": "^5.10.2"
   },
