--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "nodemon --env-file=.env src/index.js",
     "start": "node src/index.js",
     "prisma:migrate:save": "prisma migrate dev --preview-feature --create-only",
-    "prisma:migrate:run": "prisma migrate deploy --preview-feature"
+    "prisma:migrate:run": "prisma migrate deploy --preview-feature",
+    "prisma:generate": "prisma generate"
   },
   "keywords": [
     "backend",
@@ -19,12 +20,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
     "joi": "^17.12.2",
     "prisma": "^5.10.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "nodemon": "^3.1.0"
   }
