--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
     "joi": "^17.12.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.10.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "nodemon": "^3.1.0"
   }
 }
