--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node src/index.js",
     "prisma:migrate:save": "prisma migrate dev --preview-feature --create-only",
     "prisma:migrate:run": "prisma migrate deploy --preview-feature",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "prisma:seed": "prisma db seed"
   },
   "keywords": [
     "backend",
@@ -32,5 +33,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "nodemon": "^3.1.0"
+  },
+  "prisma": {
+    "seed": "node ./prisma/seed/index.js"
   }
 }
