--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "express": "^4.18.3",
+    "prisma": "^5.11.0",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
